hard-gists/5437436/run.log
=== Docker Run Log for 5437436 ===
Started at: Mi 29. Okt 15:41:20 CET 2025

[2025-10-29 15:41:20] START: Running container for 5437436
[2025-10-29 15:41:20] SUCCESS: Container cb14ff7ee902755e49020bbc2310011c638e698739a6c0382c62ed8b20de463b started for 5437436
=== Container logs for 5437436 ===
  File "/snippet.py", line 20
    print 'Directory created on desktop!'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5437436 ===
[2025-10-29 15:41:22] INFO: Container cb14ff7ee902755e49020bbc2310011c638e698739a6c0382c62ed8b20de463b has stopped
